fix(ɵcomponents/tabbar): ensure tabbar grows with tab content until encountering a layout constraint
Theming of the tabbar introduced a layout problem where the tabbar no longer grew until encountering a layout constraint, such as a max height constraint or a constraint imposed by the enclosing layout.

--- a/projects/scion/components.internal/tabbar/src/tabbar.component.scss
+++ b/projects/scion/components.internal/tabbar/src/tabbar.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
+  overflow: hidden; // enable tab content to overflow when encountering a layout constraint
 
   > sci-viewport.tabbar {
     flex: none;
@@ -49,7 +50,7 @@
   }
 
   > sci-viewport.tabcontent {
-    flex:  1 1 0;
+    flex: auto; // do not use `flex: 1 1 0` to support vertical growing of the tabbar according to its tab content height
     margin-top: 1em;
   }
 }
